LATEST UPDATES - 26 Januari 2026
==============================

1. UPDATE DESAIN HALAMAN EDIT BATCH
   - Menyamakan desain halaman Edit Batch dengan halaman Add Batch.
   - Mengubah tema warna menjadi Biru (Blue) untuk membedakan mode Edit.
   - Memperbarui komponen Header, Form, dan Tombol agar konsisten.
   - File yang diubah: pages/admin/batch/edit/[id].vue

2. UPDATE PAGE PROFILE ADMIN
   - Mengubah sumber data profil (Nama, Foto, Role) menggunakan API userdb.
   - Menampilkan data detail user sesuai response API.
   - File yang diubah: pages/admin/profile.vue

Timestamp: 2026-01-26 10:25:00